sa-jenkins-build.yml
apiVersion: v1
kind: Namespace
metadata:
  name: build

---

apiVersion: v1
kind: Namespace
metadata:
  name: prod

---

apiVersion: v1
kind: Namespace
metadata:
  name: staging
