jenkins-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "haproxy"
spec:
  rules:
  - host: jenkins.demo.devops-caffe.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 80
